# Bazel-FancyText

./: BUILD  MODULE.bazel  README.md
src/main/java/com/example/: Greeting.java
